# math-lib

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements
book-exercises/GAAL/Cap1/: ex.py
docs/: linear_algebra.md
src/linear_system/: __init__.py  error.py  linear_system.py
src/matrix/: __init__.py  error.py  matrix.py  scalar.py
tests/: linear_system_test.py  matrix_test.py
tests/matrix/: matrix_test.py
